--- a/beginning/beginning/part2/vectacorp/aboutus.html
+++ b/beginning/beginning/part2/vectacorp/aboutus.html
@@ -19,15 +19,10 @@
 <p>With innovative approaches and advanced methodologies, Vecta Corp. provides scalable business solutions to help companies achieve success through revenue increase, cost management and user satisfaction.</p>
 <h2>Management Team</h2>
     <section>
-        <img src="images/head_agnes.gif" width="80" height="100" alt="Agnes"> 
-        <p>
-            Agnes<br>
-            Vice President, Accounting<br>
-            With over 14 years of public accounting and business advisory 
-            service experience in the Tongas, Ecuador, Canada, Botswana and 
-            the US, Agnes is the most seasoned and diversed member of the Vecta
-             Corp. team.
-        </p>
+    <img src="images/head_agnes.gif" width="80" height="100" alt="Agnes" style=float:left> 
+    <p>Agnes<br>
+    Vice President, Accounting<br>
+    With over 14 years of public accounting and business advisory service experience in the Tongas, Ecuador, Canada, Botswana and the US, Agnes is the most seasoned and diversed member of the Vecta Corp. team.</p>
     </section>
     <section>
     <img src="images/head_damon.gif" width="80" height="100" alt="Damon"> 
