--- a/beginning/part1/index.html
+++ b/beginning/part1/index.html
@@ -8,7 +8,6 @@
 
 
 <h3>Welcome</h3>
-<div class='first'>
 <p>With innovative approaches and advanced methodologies, Vecta Corporation provides scalable business solutions to help companies achieve success through revenue increase, cost management, and user satisfaction. Our approach stems from the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a memorable and positive user experience.</p>
 <p>welcome world</p>
 </div>
@@ -24,19 +23,16 @@ Create a highly user-friendly and easy-to-navigate information architecture that
 Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing revenues.</p>
 
 <h3>Client Testimonials</h3>
-<div id='testimonial1'>
-<p>Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.</p>
+<p id='testimonial1'>Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.</p>
 <p>Ferris Finkelstein<br>
 Founder and CEO<br>
 <a href="http://www.dorknozzle.com">dorknozzle</a></p>
-</div>
 
-<div id='testimonial1'>
-<p>Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business benefits we have rceived by working with them.</p>
+<p id='testimonial1'>Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business benefits we have rceived by working with them.</p>
 <p>Justin Case<br>
 CTO<br>
 IX Inc.</p>
-</div>
+
 
 <h3>Contact Vecta Corporation</h3>
 
