--- a/beginning/part2/vectacorp/index.html
+++ b/beginning/part2/vectacorp/index.html
@@ -5,7 +5,7 @@
 	<title>Welcome to Vecta Corporation</title>
     <link rel="stylesheet" href="styles/styles.css">
     <style>
-        .sol_1{
+        p:not(:first-of-type)::first-line{
             font-weight: bold;
         }
     </style>
@@ -13,7 +13,7 @@
 
 <body>
 <img src="images/header.gif" alt="">
-<ul class='list'>
+<ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutus.html">About Us</a></li>
     <li><a href="solutions.html">Solutions</a></li>
@@ -25,14 +25,14 @@
 <h2>Our Solutions</h2>
 
 <p><img src="images/logo_vprospect.gif" width="63" height="36" alt="" style=float:left> 
-<span class='sol_1'>vProspect 2.0</span><br>
+vProspect 2.0<br>
 Define and research your target audience, define your strategy to reach that audience and present a strong and memorable brand to that audience.</p>
 
 <p><img src="images/logo_vconvert.gif" width="63" height="36" alt="" style=float:left> 
-<span class='sol_1'>vConvert 2.0 </span><br>
+vConvert 2.0<br>
 Create a highly user-friendly and easy-to-navigate information architecture that will help your prospects interact with the company on a highly interactive level.</p>
 <p><img src="images/logo_vretain.gif" width="63" height="36" alt="" style=float:left> 
-<span class='sol_1'>vRetain 1.0 </span><br>
+vRetain 1.0<br>
 Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing revenues.</p>
 <h2>Client Testimonials</h2>
 <blockquote><q>Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.</q></blockquote>
