--- a/beginning/part2/vectacorp/pricing.html
+++ b/beginning/part2/vectacorp/pricing.html
@@ -8,7 +8,7 @@
 
 <body>
 <img src="images/header.gif" alt="">
-<ul class='list'>
+<ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutus.html">About Us</a></li>
     <li><a href="solutions.html">Solutions</a></li>
@@ -18,10 +18,8 @@
 <h2>Pricing</h2>
 
 <section class="pricing">
-    <div class='div1'>
-        <div class='div1_inside'>
+    <div>
         <img src="images/logo_vprospect.gif" width="63" height="36" alt="vProspect 2.0">
-        </div>
         <h3>$99 per month</h3>
         <p>10 User Licenses<br>
             1 Admin Account<br>
@@ -30,10 +28,8 @@
         </p>
     </div>
 
-    <div class='div2'>
-        <div class='div2_inside'>
+    <div>
         <img src="images/logo_vconvert.gif" width="63" height="36" alt="vConvert 2.0">
-        </div>
         <h3>$99 per month</h3>
         <p>10 User Licenses<br>
         1 Admin Account<br>
@@ -41,21 +37,18 @@
         Unlimied Access</p>
     </div>
 
-    <div class='div3'>
-        <div class='div3_inside'>
+    <div>
         <img src="images/logo_vretain.gif" width="63" height="36" alt="vRetain 1.0">
-        </div>
         <h3>$49 per month</h3>
         <p>10 User Licenses<br>
         1 Admin Account<br>
         6 Regional Passes<br>
         Unlimied Access</p>
     </div>
-    <div class='div4'>
-        <div class='div4_inside'>
+
+    <div>
         ENTERPRISE
         <br>
-        </div>
         <h3>$200 per month</h3>
         <p>All 3 vSolutions<br>
         Unlimied Licenses<br>
